@@ -1,6 +1,8 @@
 Changelog for Dist::Zilla::PluginBundle::TestingMania
 
 {{$NEXT}}
+ * Allow setting your maximum target perl version explicitly
+   with max_target_perl [xdg++]
 
 0.18      2012-07-29
  * Allow setting is_strict and has_version for Test::Version plugin
